fleshes out what could be a landing page with some nice graphics

--- a/index.html
+++ b/index.html
@@ -20,32 +20,72 @@
   </head>
   <body>
     <div class="index-filter">
-      <div class="container">
-        <h1>WAC 2018</h1>
+      <div class="container text-center">
         <div class="img-fluid logo">
           <img class="img-fluid" src="img/wac_logo.svg" alt="WAC Logo"/>
         </div>
+        <h1>WAC 2018</h1>
+        <span class="h2">The World Affairs Conference</span>
+        <p class="lead">
+          Canada's oldest student-led current affairs conference
+        </p>
+        <a class="btn btn-secondary" href="https://2017.world.ac">2017 Website</a>
+        <div class="fa-3x">
+          <a class="white-icon" href="mailto:mailto:wac@ucc.on.ca"><span class="fa fa-envelope"></span></a>
+          <a class="white-icon" href="https://www.facebook.com/worldaffairsconference/"><span class="fa fa-facebook-official"></span></a>
+          <a class="white-icon" href="https://twitter.com/WorldAffairsCon"><span class="fa fa-twitter"></span></a>
+          <a class="white-icon" href="https://instagram.com/WorldAffairsCon"><span class="fa fa-instagram"></span></a>
+          <a class="white-icon" href="https://github.com/worldaffairsconference/"><span class="fa fa-github"></span></a>
+        </div>
+        <div class="h3 mt-3 pt-3">Learn More</div>
+        </br>
+        <span class="fa fa-3x fa-chevron-down"></span>
       </div>
-    </div>
-    <div class="container text-center">
-      <h1>Thanks for coming to WAC 2017!</h1>
-      <h2>We hope that you enjoyed the conference.</h2>
-      <div class="fa-2x">A few quick links:</div>
-      <div>
-         <a class="btn btn-secondary" href="https://2017.world.ac">2017 Website</a> <a class="btn btn-secondary" href="https://goo.gl/forms/4OpHxG8vUMVsQkEa2">WAC Feedback Form</a> <a class="btn btn-secondary" href="https://github.com/malsf21/world.ac"><span class="fa fa-github"></span> WAC on GitHub</a>
-       </div>
-       <div class="fa-3x">
-         <a class="black-icon" href="mailto:mailto:wac@ucc.on.ca"><span class="fa fa-envelope"></span></a> <a class="black-icon" href="https://www.facebook.com/worldaffairsconference/"><span class="fa fa-facebook-official"></span></a> <a class="black-icon" href="https://twitter.com/WorldAffairsCon"><span class="fa fa-twitter"></span></a> <a class="black-icon" href="https://instagram.com/WorldAffairsCon"><span class="fa fa-instagram"></span></a>
-       </div>
-       <p>
-         So long, and thanks for all the fish!
-       </p>
-      <span class="fa fa-heart" style="color:red;"></span> <span class="fa fa-heart" style="color:red;"></span> <span class="fa fa-heart" style="color:red;"></span>
-    </div>
-    <footer class="footer text-center mt-3">
-      <div class="container">
-        The World Affairs website, made by the WAC team with <span class="fa fa-heart" style="color:red;"></span> and <a href="https://github.com/worldaffairsconference/docs/" style="color:inherit;"><span class="fa fa-github"></span></a>
+      <div class="container mt-3">
+        <div class="row">
+          <div class="col-md-4">
+            <img class="img-fluid rounded" src="img/sonia.jpg" />
+          </div>
+          <div class="col-md-8 mt-2 pb-5">
+            <h2 class="mt-1">Engage With Global Issues</h2>
+            <p>
+              Crowdfunding business model canvas influencer termsheet. Agile development hypotheses stealth android. Handshake deployment channels freemium crowdsource hackathon bootstrapping sales founders business model canvas metrics growth hacking seed money.
+            </p>
+          </div>
+        </div>
+        <div class="row mt-2 pb-5">
+          <div class="col-md-4 push-md-8">
+            <img class="img-fluid rounded" src="img/snowden.jpg" />
+          </div>
+          <div class="col-md-8 pull-md-4">
+            <h2 class="text-md-right mt-1">Engaging Speakers</h2>
+            <p>
+              Crowdfunding business model canvas influencer termsheet. Agile development hypotheses stealth android. Handshake deployment channels freemium crowdsource hackathon bootstrapping sales founders business model canvas metrics growth hacking seed money.
+            </p>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col-md-4">
+            <img class="img-fluid rounded" src="img/security.jpg" />
+          </div>
+          <div class="col-md-8">
+            <h2 class="mt-1">Dedicated Staff</h2>
+            <p>
+              Crowdfunding business model canvas influencer termsheet. Agile development hypotheses stealth android. Handshake deployment channels freemium crowdsource hackathon bootstrapping sales founders business model canvas metrics growth hacking seed money.
+            </p>
+          </div>
+        </div>
+        <div class="text-center mt-5">
+          <span class="h1">Interested in WAC?</span>
+          </br>
+          <span class="h2">More information is coming soon.</span>
+        </div>
       </div>
-    </footer>
+      <footer class="text-center mt-3">
+        <div class="container">
+          The World Affairs Conference website, made by the WAC team with <span class="fa fa-heart" style="color:red;"></span> and <a class="white-icon" href="https://github.com/worldaffairsconference/landing-page/"><span class="fa fa-github"></span></a>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
