--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
           <img class="img-fluid" src="img/wac_logo.svg" alt="WAC Logo"/>
         </div>
         <h1>WAC 2018</h1>
-        <span class="h2">The World Affairs Conference</span>
-        <p class="lead">
+        <div class="h4 mt-1">"Paradigm Shifts"</div>
+        </br>
+        <div class="h2 mt-1">The World Affairs Conference</div>
+        <p class="lead mt-1">
           Canada's oldest student-led current affairs conference
         </p>
         <a class="btn btn-secondary" href="https://2017.world.ac">2017 Website</a>
@@ -37,8 +39,6 @@
           <a class="white-icon" href="https://instagram.com/WorldAffairsCon"><span class="fa fa-instagram"></span></a>
           <a class="white-icon" href="https://github.com/worldaffairsconference/"><span class="fa fa-github"></span></a>
         </div>
-        <div class="h3 mt-3 pt-3">Learn More</div>
-        </br>
         <span class="fa fa-3x fa-chevron-down"></span>
       </div>
       <div class="container mt-3">
@@ -47,20 +47,20 @@
             <img class="img-fluid rounded" src="img/sonia.jpg" />
           </div>
           <div class="col-md-8 mt-2 pb-5">
-            <h2 class="mt-1">Engage With Global Issues</h2>
+            <h2 class="mt-1">Inspiring Topics</h2>
             <p>
-              Crowdfunding business model canvas influencer termsheet. Agile development hypotheses stealth android. Handshake deployment channels freemium crowdsource hackathon bootstrapping sales founders business model canvas metrics growth hacking seed money.
+              Every year, the World Affairs Conference touches on pressing issues that affect both delegates individually and the world as a whole. This year's theme for the World Affairs Conference is <b>Paradigm Shift</b>: we'll be examining how ideas have fundamentally changed with the advent of new technology, changing political structures, and a declining Earth.
             </p>
           </div>
         </div>
         <div class="row mt-2 pb-5">
           <div class="col-md-4 push-md-8">
-            <img class="img-fluid rounded" src="img/snowden.jpg" />
+            <img class="img-fluid rounded" src="img/speaker-medley.png" />
           </div>
           <div class="col-md-8 pull-md-4">
             <h2 class="text-md-right mt-1">Engaging Speakers</h2>
             <p>
-              Crowdfunding business model canvas influencer termsheet. Agile development hypotheses stealth android. Handshake deployment channels freemium crowdsource hackathon bootstrapping sales founders business model canvas metrics growth hacking seed money.
+              The World Affairs Conference has a diverse roster of past speakers spanning both the globe and a variety of topics. Notable previous speakers include Edward Snowden, Marc Garneau, and most recently Dr. Aubrey de Grey. We'll be releasing more information about our speakers as we near the conference.
             </p>
           </div>
         </div>
@@ -69,9 +69,9 @@
             <img class="img-fluid rounded" src="img/security.jpg" />
           </div>
           <div class="col-md-8">
-            <h2 class="mt-1">Dedicated Staff</h2>
+            <h2 class="mt-1">Approachable Staff</h2>
             <p>
-              Crowdfunding business model canvas influencer termsheet. Agile development hypotheses stealth android. Handshake deployment channels freemium crowdsource hackathon bootstrapping sales founders business model canvas metrics growth hacking seed money.
+              At the World Affairs Conference, our staff is dedicated to creating an amazing conference experience for all delegates. If you have any questions about the conference, don't hesistate to contact us at <a href="mailto:wac@ucc.on.ca">wac@ucc.on.ca</a>, or through social media.
             </p>
           </div>
         </div>
