--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="col-md-8 mt-2 pb-5">
             <h2 class="mt-1">Inspiring Topics</h2>
             <p>
-              Every year, the World Affairs Conference touches on pressing issues that affect both delegates individually and the world as a whole. This year's theme for the World Affairs Conference is <b>Paradigm Shift</b>: we'll be examining how ideas have fundamentally changed with the advent of new technology, changing political structures, and a declining Earth.
+              Every year, the World Affairs Conference touches on pressing issues that affect both delegates individually and the world as a whole. This year's theme for the World Affairs Conference is <b>Paradigm Shifts</b>: we'll be examining how ideas have fundamentally changed with the advent of new technology, changing political structures, and a declining Earth. We'll be releasing more information about our theme and our programs as we get closer to WAC.
             </p>
           </div>
         </div>
