--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.min.css">
-    <!--<script src="js/google_analytics.js"></script>-->
+    <script src="js/google_analytics.js"></script>
   </head>
   <body>
     <div class="index-filter">
