--- a/index.html
+++ b/index.html
@@ -1,91 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="author" content="The World Affairs Conference Team">
-
-    <title>The World Affairs Conference</title>
-    <meta name="description" content="The World Affairs Conference Website!">
-
-    <link rel="icon" type="image/png" sizes="192x192"  href="img/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="img/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.min.css">
-    <script src="js/google_analytics.js"></script>
+    <title>WAC REDIRECT</title>
+    <script>
+      window.location.replace("http://worldaffairscon.org");
+    </script>
   </head>
   <body>
-    <div class="index-filter">
-      <div class="container text-center">
-        <div class="img-fluid logo">
-          <img class="img-fluid" src="img/wac_logo.svg" alt="WAC Logo"/>
-        </div>
-        <h1>WAC 2018</h1>
-        <div class="h4 mt-1">"Paradigm Shifts"</div>
-        </br>
-        <div class="h2 mt-1">The World Affairs Conference</div>
-        <p class="lead mt-1">
-          Canada's oldest student-led current affairs conference
-        </p>
-        <a class="btn btn-secondary" href="https://2017.world.ac">2017 Website</a>
-        <div class="fa-3x">
-          <a class="white-icon" href="mailto:mailto:wac@ucc.on.ca"><span class="fa fa-envelope"></span></a>
-          <a class="white-icon" href="https://www.facebook.com/worldaffairsconference/"><span class="fa fa-facebook-official"></span></a>
-          <a class="white-icon" href="https://twitter.com/WorldAffairsCon"><span class="fa fa-twitter"></span></a>
-          <a class="white-icon" href="https://instagram.com/WorldAffairsCon"><span class="fa fa-instagram"></span></a>
-          <a class="white-icon" href="https://github.com/worldaffairsconference/"><span class="fa fa-github"></span></a>
-        </div>
-        <span class="fa fa-3x fa-chevron-down"></span>
-      </div>
-      <div class="container mt-3">
-        <div class="row">
-          <div class="col-md-4">
-            <img class="img-fluid rounded" src="img/sonia.jpg" />
-          </div>
-          <div class="col-md-8 mt-2 pb-5">
-            <h2 class="mt-1">Inspiring Topics</h2>
-            <p>
-              Every year, the World Affairs Conference touches on pressing issues that affect both delegates individually and the world as a whole. This year's theme for the World Affairs Conference is <b>Paradigm Shifts</b>: we'll be examining how ideas have fundamentally changed with the advent of new technology, changing political structures, and a declining Earth. We'll be releasing more information about our theme and our programs as we get closer to WAC.
-            </p>
-          </div>
-        </div>
-        <div class="row mt-2 pb-5">
-          <div class="col-md-4 push-md-8">
-            <img class="img-fluid rounded" src="img/speaker-medley.png" />
-          </div>
-          <div class="col-md-8 pull-md-4">
-            <h2 class="text-md-right mt-1">Engaging Speakers</h2>
-            <p>
-              The World Affairs Conference has a diverse roster of past speakers spanning both the globe and a variety of topics. Notable previous speakers include Edward Snowden, Marc Garneau, and most recently Dr. Aubrey de Grey. We'll be releasing more information about our speakers as we near the conference.
-            </p>
-          </div>
-        </div>
-        <div class="row mt-2">
-          <div class="col-md-4">
-            <img class="img-fluid rounded" src="img/security.jpg" />
-          </div>
-          <div class="col-md-8">
-            <h2 class="mt-1">Approachable Staff</h2>
-            <p>
-              At the World Affairs Conference, our staff is dedicated to creating an amazing conference experience for all delegates. If you have any questions about the conference, don't hesistate to contact us at <a href="mailto:wac@ucc.on.ca">wac@ucc.on.ca</a>, or through social media.
-            </p>
-          </div>
-        </div>
-        <div class="text-center mt-5">
-          <span class="h1">Interested in WAC?</span>
-          </br>
-          <span class="h2">More information is coming soon.</span>
-        </div>
-      </div>
-      <footer class="text-center mt-3">
-        <div class="container">
-          The World Affairs Conference website, made by the WAC team with <span class="fa fa-heart" style="color:red;"></span> and <a class="white-icon" href="https://github.com/worldaffairsconference/landing-page/"><span class="fa fa-github"></span></a>
-        </div>
-      </footer>
-    </div>
+    <p>
+      Redirecting to
+      <a href="http://worldaffairscon.org">worldaffairscon.org</a>
+    </p>
   </body>
 </html>
